Fix spacing between participant groups

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -3,3 +3,11 @@
   margin: auto;
   max-height: 200px;
 }
+
+#roster {
+  margin-bottom: 1rem;
+
+  ul {
+    margin-bottom: 0;
+  }
+}
